kubernetes/Sample_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    project: ""             # Name of the project
    environment: ""         # Environment that we are running in like Prd, stg
    criticality: ""         # criticallity of the project ex: 5 is high criticality
    support-contact: ""     # contact name
    owner: ""               # owner of the application
spec:
  replicas: 1               # number of pods to be created
  selector:
    matchLabels:
      project: ""             # Name of the project
      environment: ""         # Environment that we are running in like Prd, stg
      criticality: ""         # criticallity of the project ex: 5 is high criticality
      support-contact: ""     # contact name
      owner: ""               # owner of the application
  template:
    metadata:
      labels:
      project: ""             # Name of the project
      environment: ""         # Environment that we are running in like Prd, stg
      criticality: ""         # criticallity of the project ex: 5 is high criticality
      support-contact: ""     # contact name
      owner: ""               # owner of the application
    spec:
      containers:
      - name: nginx
        image: <artifactory url>:<portnumber>/nginx
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 1
            memory: 1Gi
      restartPolicy: Always
